Refactor en MovieController -> Implementación de recursos generados por OpenAPI
