# imdb-rest/src/main/resources/openapi/openapi.yml
@@ -38,14 +38,34 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Actor'
+                  $ref: '#/components/schemas/FindAllActorsResponse'
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal error
+  /movies:
+    get:
+      tags:
+        - movie
+      summary: Get the list of registered movies
+      description: Get the list of registered movies
+      operationId: findAllMovies
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FindAllMoviesResponse'
         '400':
           description: Bad Request
         '500':
           description: Internal error
 components:
   schemas:
-    Actor:
+    FindAllActorsResponse:
       type: object
       properties:
         id:
@@ -58,3 +78,11 @@ components:
         dateOfBirth:
           type: string
           format: date
+    FindAllMoviesResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        title:
+          type: string
